get.yaml
# Kubernetes Service & Deployment file
apiVersion: v1
kind: Service
metadata:
  name: get
spec:
  type: ClusterIP
  selector:
    app: get
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get
  labels:
    app: get
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get
  template:
    metadata:
      labels:
        app: get
    spec:
      containers:
      - image: caddy
        name: get
        command:
        - caddy
        args:
        - run
        - --config
        - /etc/Caddyfile
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/Caddyfile
          name: caddy-config
          subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: get-caddyfile
            items:
              - key: Caddyfile
                path: Caddyfile
                mode: 0644
