hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
      - name: hub
        image: btwiuse/k0s:latest
        args:
        - hub
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: hub
