ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    # traefik.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/1,128.0.0.0/2,192.0.0.0/3,224.0.0.0/4"
    # kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
  # cert-manager.io/cluster-issuer: letsencrypt
  # cert-manager.io/cluster-issuer: staging-letsencrypt
  # cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: k0s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /k0s
        backend:
          serviceName: import-redir
          servicePort: 80
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 80
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 80
  - host: get.k0s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: get
          servicePort: 80
  - host: hub.k0s.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: hub
          servicePort: 80
  - host: prometheus-postgresql-adapter.k0s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-postgresql-adapter
          servicePort: 80
  tls:
  - hosts:
    - prometheus-postgresql-adapter.k0s.io
    - get.k0s.io
    - hub.k0s.io
    - k0s.io
    secretName: k0s
